# ics

src/: CMakeLists.txt  Makefile  cache.c  common.c  ll.c  pt.c  sim.c  t1_word_count.c  t1_word_count.s  t2_print_words.c  t2_print_words.s  t3_unique_words.c  t3_unique_words.s  t4_compress.c  t4_compress.s  t5_compress_more.c  t5_compress_more.s  t6_huffman.c  t6_huffman.s  task4.txt  tlb.c  trace.txt
src/include/: cache.h  common.h  ll.h  pt.h  tlb.h  types.h
src/tests/testcase01/: input.txt  output.txt  params.txt
src/tests/testcase02/: input.txt  output.txt
src/tests/testcase03/: input.txt  output.txt  params.txt
src/tests/testcase04/: input.txt  output.txt  params.txt
src/tests/testcase05/: input.txt  params.txt
src/tests/testcase06/: output.txt  params.txt
src/tests/testcase07/: input.txt  output.txt  params.txt
src/tests/testcase08/: input.txt  output.txt  params.txt
src/tests/testcase09/: input.txt  output.txt  params.txt
src/tests/testcase10/: input.txt  output.txt  params.txt
src/tests/testcase11/: input.txt  output.txt
src/tests/testcase12/: input.txt  output.txt
src/tests/testcase13/: input.txt  output.txt  params.txt
src/tests/testcase14/: input.txt  params.txt
src/tests/testcase15/: input.txt  output.txt  params.txt
src/tests/testcase16/: input.txt  output.txt  params.txt
src/tests/testcase17/: input.txt  output.txt  params.txt
src/tests/testcase18/: input.txt  output.txt  params.txt
src/tests/testcase19/: input.txt  params.txt
src/tests/testcase20/: output.txt  params.txt
src/tests/testcase21/: input.txt  (+2 more)
